[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
dynamic_malloc_support={path="../dynamic_malloc_support"}
console_support={path="../console_support"}
bus={path="../host_bus"}
timer={path="../timer"}
filesystem={path="../filesystem"}
task_manager={path="../task_manager"}
memory_manager={path="../memory_manager"}
#net_bridge={path="../net_bridge"}
#cluster_bus={path="../cluster_bus"}
[features]
board_qemu = []
board_k210 = []
