[package]
name = "cluster_bus"
version = "0.1.0"
authors = ["Pan <892916811@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", default-features = false, features = ["log", "medium-ethernet", "proto-ipv4", "socket-tcp","alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
num = { version = "0.2.1", default-features = false }
num-traits = { version = "0.2.11", default-features = false }
num-derive = "0.3"
log = "0.4"
net_bridge={path="../net_bridge"}
console_support={path="../console_support"}