[package]
name = "bus"
version = "0.1.0"
authors = ["yangpan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic_malloc_support={path="../dynamic_malloc_support"}
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
console_support={path="../console_support"}
user_bridge={path="../user_bridge"}
