[package]
name = "net_bridge"
version = "0.1.0"
authors = ["Pan <892916811@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { git = "https://github.com/rcore-os/smoltcp", rev = "5bd87c7c", default-features = false, features = ["alloc", "log", "ethernet", "proto-ipv4", "proto-igmp", "socket-icmp", "socket-udp", "socket-tcp", "socket-raw"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
log="0.4"
memory_manager={path="../memory_manager"}
dynamic_malloc_support={path="../dynamic_malloc_support"}
console_support={path="../console_support"}
volatile = "0.3"
bitflags = "1.3"