[package]
name = "process"
version = "0.1.0"
authors = ["yangpan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_support={path="../console_support"}
bus={path="../hostbus"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
dynamic_malloc_support={path="../dynamic_malloc_support"}
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
virtual_memory={path="../virtual_memory"}
spin = "0.7.0"