[package]
name = "task_manager"
version = "0.1.0"
authors = ["yangpan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_support={path="../console_support"}
bus={path="../host_bus"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
dynamic_malloc_support={path="../dynamic_malloc_support"}
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
memory_manager={path="../memory_manager"}
spin = "0.7.0"