[package]
name = "virtual_memory"
version = "0.1.0"
authors = ["yangpan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
dynamic_malloc_support={path="../dynamic_malloc_support"}
console_support={path="../console_support"}
bus={path="../hostbus"}